--- a/tLCustomLighting/style.css
+++ b/tLCustomLighting/style.css
@@ -103,10 +103,22 @@ ul li{
     padding-left: 0;
     padding-right: 0;
 }
+.fixture-table{
+    width: 100%;
+    clear:both;
+    overflow: visible;
+}
 .fixture-table td{
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
+    background-repeat:no-repeat;
+    background-size: 100% 400px;
+}
+.fixture-table td h3{
+    width: 100%;
+    height: 350px;
+    color: white;
+}
+.fixture-table td a{
+    text-decoration: none;
 }
 /****** Homepage ******/
 #myCarousel{
@@ -115,12 +127,17 @@ ul li{
 #myCarousel .item img{
     min-width: 75%;
 }
+#myCarousel ol li{
+    display: none;
+}
 .carousel-title{
     position: relative;
-    right: 3%;
-    bottom:500px;
+    left: 25%;
+    bottom: 300px;
     color: white;
-    font-family: "Brush Script M7"; 
+    font-family: "Brush Script M7";
+    border: 3px solid white;
+    width: 300px;
 }
 .item a{
     text-decoration: none;
@@ -154,6 +171,7 @@ footer table td:nth-child(2){
 .hd-search #s{
     vertical-align: top;
     padding: 5px 0;
+    
 }
 .gallery-grid{
     padding-left: 0;
@@ -167,7 +185,23 @@ footer table td:nth-child(2){
     margin-left:;
     margin-bottom: 10px;
 }
-
+/***** Login.php *****/
+.login-body{
+    height: 60vh;
+}
+.login-info{
+   padding: 10px;
+}
+/***** News page *****/
+.main-blog{
+    margin-bottom: 100vh;
+}
+/***** Gallery Display *****/
+.display{
+    display: block;
+    margin: auto;
+    width: 60%;
+}
 @media only screen and (min-width: 786px){
     /*Desktop*/
     .col-sm-1 a:after{
@@ -226,6 +260,7 @@ footer table td:nth-child(2){
         height: 100%;
         padding-left: 0;
         padding-right: 0;
+        clip-path: inset(0 0 70px);
     }
     .content-col{
         overflow: auto;
@@ -233,6 +268,10 @@ footer table td:nth-child(2){
     }
     #myCarousel img{
         height: 490px;   
+    }
+    .carousel-title:hover{
+        color: yellow;
+        border-color: yellow;
     }
     .blog-col{
         width: 20%;
@@ -264,10 +303,27 @@ footer table td:nth-child(2){
     .container-fluid.index{
         height: 100vh;
     }
+    .fixture-table{
+        clear:both;
+        overflow:visible;
+    }
+    .fixture-table td{
+        background-repeat:no-repeat;
+        background-size: 425px; 400px;
+    }
+    .fixture-table td h3{
+        width: 425px;
+        height: 350px;
+        color: white;
+    }
+    .fixture-table, tr, td{
+        display: block;
+    }
     footer{
-        padding: 0;
+        padding: 0 0 150px 0;
         height: 20vh;
-        margin-top: 47%;
+        vertical-align: baseline;
+        margin-top: 140%;
     }
     footer .row{
         height: 2px;
@@ -275,7 +331,7 @@ footer table td:nth-child(2){
         margin-left: 0;
     }
     footer h6{
-        padding: 25px;
+        padding: 25px 0 75px 0;
         height: 100px;
         margin-bottom: 0;
     }
