Changing post ids

--- a/tLCustomLighting/style.css
+++ b/tLCustomLighting/style.css
@@ -214,6 +214,13 @@ footer table td:nth-child(2){
         padding-bottom: 0;
         margin-bottom: 0;
     }
+    .login .col-sm-2 ul li{
+        float: left;
+        width: 33.3%;
+        padding: 10px;
+        padding-right: 2px;
+        border-right: 1px solid lightgray;
+    }
     /*Desktop style for main navigation*/
     .banner .site-nav ul{
         margin: 0;
