--- a/css/desktop.css
+++ b/css/desktop.css
@@ -6,10 +6,11 @@
     .news-grid li{
         display: block;
         float: left;
-        width: 25%;
+        width: 16%;
     }
     .news-grid li img{
         height: 150px;
+        width: 75%;
     }
     .container-fluid.index{
         height: 45%;
@@ -18,6 +19,21 @@
         height: 100%;
         padding-left: 0;
         padding-right: 0;
+    }
+    #newsCarousel{
+    	border-top: 1px solid darkgoldenrod;
+    	border-bottom: 1px solid darkgoldenrod;
+    }
+    .carousel-title{
+	width: 250px;
+	text-align: center;
+	position: absolute;
+	bottom: 150px;
+	color: white;
+	border: 3px solid white;
+    }
+    .carousel-title:hover{
+        border-color: goldenrod;
     }
     .col-sm-6.title{
         display: block;
@@ -48,15 +64,6 @@
     .col-sm-3.text-right a:after{
         content: "Client Login";
         color: black;
-    }
-    .carousel-title{
-        width: 25%;
-        text-align: center;
-        position: absolute;
-        bottom: 150px;
-        color: white;
-        border: 3px solid white;
-        margin-left: 35%;
     }
     .login .col-sm-6, .login .col-sm-3, .login .col-sm-1, .login .col-sm-2{
         padding-bottom: 0;
@@ -139,9 +146,6 @@
         width: 500px;
         margin-left: 30%;
     }
-    .carousel-title:hover{
-        border-color: goldenrod;
-    }
     /* Footer */
     footer{
         border:1px solid black;
@@ -178,10 +182,6 @@
     .news{
        border: 2px solid darkgoldenrod; 
     }
-    
-    
-    
-    
     .col-sm-3.text-right a i{
         color: black;
     }
@@ -189,6 +189,37 @@
         float: right;
         height: 46px;
     }
+.fixture-table{
+    width: 100%;
+    clear:both;
+    overflow: visible;
+}
+.fixture-table tbody{
+    width: 1039px;
+}
+.fixture-table tr{
+    width: 100%;
+}
+.fixture-table td{
+    display: block;
+    float: left;
+    width: 50%;
+    background-repeat:no-repeat;
+    background-size: 100% 400px;
+}
+
+.fixture-table td a{
+    text-decoration: none;
+}
+.fixture-table td h3{
+    width: 700px;
+    height: 350px;
+    color: white;
+}
+.fixture-table, tr, td{
+    display: block;
+}
+  }
     /*Desktop style for main navigation*/
     /* Desktop for homepage */
     #myCarousel .item img{
